tests/baselines/reference/parserReturnStatement1.errors.txt
tests/cases/conformance/parser/ecmascript5/Statements/ReturnStatements/parserReturnStatement1.ts(1,1): error TS1108: A 'return' statement can only be used within a function body.


==== tests/cases/conformance/parser/ecmascript5/Statements/ReturnStatements/parserReturnStatement1.ts (1 errors) ====
    return;
    ~~~~~~
!!! error TS1108: A 'return' statement can only be used within a function body.